--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
     <!-- Custom Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,700,800' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" type="text/css">
+
     <!-- Plugin CSS -->
     <link rel="stylesheet" href="css/animate.min.css" type="text/css">
 
@@ -375,7 +377,7 @@
                 </ul>
 
             </div>
-        </nav>
+        </nav> 
     </footer>
 
 <!-- =============================Portfolio Modals========================================== -->
