--- a/about.html
+++ b/about.html
@@ -49,11 +49,9 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!--<a href="index.html" class="logo"></a>-->
-                <a href="index.html">
-                    <P style="color:#222222; font-weight:400; font-size:26px">mohamed</P>
+                    <P style="color:#222222; font-weight:400; margin-top: 1px; font-size:26px">mohamed</P>
                     <P style="color:#222222; font-weight:600; margin-top: -40px; font-size:38px; text-align:left">fouda</P>
                     <!--<img class="img-responsive" src="img/name.png" alt="logo" align="middle">-->        
-                </a>
                 <!--<a class="navbar-brand" href="index.html">The Ball Picking Robot</a>-->
             </div>
 
@@ -131,8 +129,8 @@
                 <img class="about-image img-circle pull-left" src="img/Avatar.png">
 
                 <p class="text-left text-muted"><small>I am a recent engineering grad from McMaster University.</small></p>
-                <p class="text-left text-muted"><small>My passion lies in product design, & design thinking in general. I believe that every product needs to have a fairy tale to be told. Perhaps that is also why I love story telling!</small></p>
-                <p class="text-left text-muted"><small>I love working on projects on a high systematic level, learning about people's habits, & problems; then translating that into meaningful solutions. I have been spending my time learning in 3 areas; technical (like my engineering major), business (like my 2 minors that I didn't quiet finish!), & design (like the extra curriculum projects I have done).</small></p>
+                <p class="text-left text-muted"><small>My passion lies in product design, & design thinking in general. I believe that every product needs to have a fairy tale to be told. Perhaps that is also why I love storytelling!</small></p>
+                <p class="text-left text-muted"><small>I love working on projects on a high systemic level, learning about people's habits, & problems; then translating that into meaningful solutions. I have been spending my time learning in 3 areas; technical (like my engineering major), business (like my 2 minors that I didn't quite finish!), & design (like the extra curriculum projects I have done).</small></p>
                 <!--<p3 class="lead text-left text-muted">Toronto, Canada</p3>-->
 
                 <p class="text-left text-muted"><small>I’m currently looking for job opportunities in design, as I move away from engineering & fully into product designer... <a href="mailto:foudamo@mcmaster.ca">Let’s chat if you have something in mind.</a></small></p>
