--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!--<a href="index.html" class="logo"></a>-->
-                <a href="index.html">
-                    <P style="color:#222222; font-weight:400; font-size:26px">mohamed</P>
+                
+                    <P style="color:#222222; font-weight:400; margin-top: 1px; font-size:26px">mohamed</P>
                     <P style="color:#222222; font-weight:600; margin-top: -40px; font-size:38px; text-align:left">fouda</P>
                     <!--<img class="img-responsive" src="img/name.png" alt="logo" align="middle">-->         
-                </a>
+                
                 <!--<a class="navbar-brand" href="index.html">The Ball Picking Robot</a>-->
             </div>
 
@@ -525,6 +525,14 @@
                                 <li>Category: Branding & Website Design</li>
                             </ul>
                             <img class="img-responsive" src="files/Modal_4/1.png" alt="">
+                            <img class="img-responsive" src="files/Modal_4/posters.png" alt="">
+                            <img class="img-responsive" src="files/Modal_4/6.png" alt="">
+                            <img class="img-responsive" src="files/Modal_4/Tshirts.png" alt="">
+                            <img class="img-responsive" src="files/Modal_4/4.jpg" alt="">
+                            <img class="img-responsive" src="files/Modal_4/5.jpg" alt="">
+                            <img class="img-responsive" src="files/Modal_4/stickers.png" alt="">
+                            <img class="img-responsive" src="files/Modal_4/3.jpg" alt="">
+                            <img class="img-responsive" src="files/Modal_4/posts.png" alt="">
                             <p><small>I am slowly adding to my portfolio online. I have yet to add the description to this project, so I have linked the final website below until I get to it.</small></p>
                             <p>You can take a look at the live site <a href="http://deltahacks.com/" target="_blank">here</a>.</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
@@ -636,7 +644,8 @@
                                 <li>Team Size: 5</li>
                                 <li>Category: Product Design</li>
                             </ul>
-                            <img class="img-responsive" src="files/Modal_7/1.png" alt="">
+                            <!--<img class="img-responsive" src="files/Modal_7/1.png" alt="">-->
+                            <img class="img-responsive" src="files/Modal_7/poster.png" alt="">
                             <p><small>I am slowly adding to my portfolio online. I have yet to add the description to this project, so I have uploaded the document my team submitted below until I get to it.</small></p>
                             <p>You can take a look at the final poster submitted <a href="files/Wbooth_Poster_final2.pdf" target="_blank">here</a>.</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
