--- a/index.html
+++ b/index.html
@@ -532,6 +532,8 @@
                             <img class="img-responsive" src="files/Modal_4/5.jpg" alt="">
                             <img class="img-responsive" src="files/Modal_4/stickers.png" alt="">
                             <img class="img-responsive" src="files/Modal_4/3.jpg" alt="">
+                            <img class="img-responsive" src="files/Modal_4/facebook.png" alt="">
+                            <img class="img-responsive" src="files/Modal_4/twitter.png" alt="">
                             <img class="img-responsive" src="files/Modal_4/posts.png" alt="">
                             <p><small>I am slowly adding to my portfolio online. I have yet to add the description to this project, so I have linked the final website below until I get to it.</small></p>
                             <p>You can take a look at the live site <a href="http://deltahacks.com/" target="_blank">here</a>.</p>
@@ -577,8 +579,21 @@
                                 Our main colours are different levels of Blue and different levels of orange/gold. Why? Typically colours are associated with meaning psychologically (seriously! This is so cool Google it up). Here’s how it goes;
                                 - Blue is associated with confidence, comfortable, and quiet; where
                                 - Orange is typically associated with creativity, innovation, and positive encouraging energy.
-                                This sums up our club and community precisely. We take risks by adding to our workloads and spending time travelling and building things; yet we are very confident in what we’re doing. We love diversity and working with others (in fact, a huge number of the club are not engineers and never coded before!) yet we’re very comfortable going outside of our comfort zones to be truly innovative. Lastly, we’re a very welcoming community that is self-motivated and encouraging towards each other, and is never too noisy for a voice to be heard :)
-                                Alas, if you’re looking for branding material, here’s how the new logo looks across the different colours:</p>
+                                This sums up our club and community precisely. We take risks by adding to our workloads and spending time travelling and building things; yet we are very confident in what we’re doing. We love diversity and working with others (in fact, a huge number of the club are not engineers and never coded before!) yet we’re very comfortable going outside of our comfort zones to be truly innovative. Lastly, we’re a very welcoming community that is self-motivated and encouraging towards each other, and is never too noisy for a voice to be heard :)</p>
+                                <p class="regular">The overall result:</p>
+
+                                <img class="img-responsive img-centered" src="files/Modal_5/twitter.png" alt="">
+                                <img class="img-responsive img-centered" src="files/Modal_5/facebook.png" alt="">
+                                <img class="img-responsive img-centered" src="files/Modal_5/youtube.png" alt="">
+                                <img class="img-responsive img-centered" src="files/Modal_5/posts.png" alt="">
+                                <!--<img class="img-responsive img-centered" src="files/Modal_5/mailchimp.png" alt="">-->
+                                
+                                <img class="img-responsive img-centered" src="files/Modal_5/stickers.png" alt="">                              
+                                <img class="img-responsive img-centered" src="files/Modal_5/tshirt.png" alt="">
+                                <img class="img-responsive img-centered" src="files/Modal_5/6.png" alt="">
+                                <img class="img-responsive img-centered" src="files/Modal_5/cards.png" alt="">
+
+                                <p class="regular">Alas, if you’re looking for branding material, here’s how the new logo looks across the different colours:</p>
                             <img class="img-responsive img-centered" src="files/Modal_5/4.png" alt="">
                             <p class="regular">& here’s the colour palette I used:</p>
                             <img class="img-responsive img-centered" src="files/Modal_5/5.png" alt="">
@@ -613,6 +628,9 @@
                                 <li>Category: Entrepenurship</li>
                             </ul>
                             <img class="img-responsive" src="files/Modal_6/1.png" alt="">
+
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/SmLplAxpQpU?rel=0" frameborder="0" allowfullscreen></iframe>
+
                             <p><small>I am slowly adding to my portfolio online. I have yet to add the description to this project, so I have linked my team's pitch below until I get to it.</small></p>
                             <p>You can take a look at the post-event article <a href="http://spectrum.mcmaster.ca/startup-companies-created-in-only-36-hours/">here</a>, as well as watch our pitch that won us Most Viable Business and People's Choice awards <a href="https://www.youtube.com/watch?v=SmLplAxpQpU" target="_blank">here</a>.</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
@@ -677,7 +695,9 @@
                                 <li>Team Size: 3</li>
                                 <li>Category: Industrial Design</li>
                             </ul>
-                            <img class="img-responsive" src="files/Modal_8/1.png" alt="">
+                            <img class="img-responsive" src="files/Modal_8/0.png" alt="">
+                            <img class="img-responsive" src="files/Modal_8/usage.png" alt="">
+                            <img class="img-responsive" src="files/Modal_8/usage2.png" alt="">
                             <p><small>I am slowly adding to my portfolio online. I have yet to add the description to this project, so I have uploaded the document my team submitted below until I get to it.</small></p>
                             <p>You can take a look at the final document submitted <a href="files/4L03_Final_Copy.pdf" target="_blank">here</a>.</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
