--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!--<a href="index.html" class="logo"></a>-->
-                    <P style="color:#222222; font-weight:400; margin-top: 1px; font-size:26px">mohamed</P>
+                    <P style="color:#222222; font-weight:400; margin-top: 1px; font-size:26px; text-align:left">mohamed</P>
                     <P style="color:#222222; font-weight:600; margin-top: -40px; font-size:38px; text-align:left">fouda</P>
                     <!--<img class="img-responsive" src="img/name.png" alt="logo" align="middle">-->        
                 <!--<a class="navbar-brand" href="index.html">The Ball Picking Robot</a>-->
