--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                 </button>
                 <!--<a href="index.html" class="logo"></a>-->
                 
-                    <P style="color:#222222; font-weight:400; margin-top: 1px; font-size:26px">mohamed</P>
-                    <P style="color:#222222; font-weight:600; margin-top: -40px; font-size:38px; text-align:left">fouda</P>
-                    <!--<img class="img-responsive" src="img/name.png" alt="logo" align="middle">-->         
+                <P style="color:#222222; font-weight:400; margin-top: 1px; font-size:26px; text-align:left">mohamed</P>
+                <P style="color:#222222; font-weight:600; margin-top: -40px; font-size:38px; text-align:left">fouda</P>
+                <!--<img class="img-responsive" src="img/name.png" alt="logo" align="middle">-->         
                 
                 <!--<a class="navbar-brand" href="index.html">The Ball Picking Robot</a>-->
             </div>
@@ -730,6 +730,8 @@
                                 <li>Category: Product Design</li>
                             </ul>
                             <img class="img-responsive" src="files/Modal_9/1.png" alt="">
+                            <img class="img-responsive" src="files/Modal_9/2.png" alt="">
+                            <img class="img-responsive" src="files/Modal_9/3.png" alt="">
                             <p><small>I am slowly adding to my portfolio online. I have yet to add the description to this project, so I have uploaded the document my team submitted below until I get to it.</small></p>
                             <p>You can take a look at the final document <a href="files/MacIN_Final 2.pdf" target="_blank">here</a>.</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
