--- a/contact.html
+++ b/contact.html
@@ -49,8 +49,8 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!--<a href="index.html" class="logo"></a>-->
-                    <P style="color:#222222; font-weight:400; margin-top: 1px; font-size:26px; text-align:left">mohamed</P>
-                    <P style="color:#222222; font-weight:600; margin-top: -40px; font-size:38px; text-align:left">fouda</P>
+                    <P style="color:#2E313D; font-weight:400; font-size:26px; text-align:left">mohamed</P>
+                    <P style="color:#2E313D; font-weight:600; margin-top: -40px; font-size:38px; text-align:left">fouda</P>
                     <!--<img class="img-responsive" src="img/name.png" alt="logo" align="middle">-->        
                 <!--<a class="navbar-brand" href="index.html">The Ball Picking Robot</a>-->
             </div>
@@ -127,12 +127,13 @@
                 <p class="light text-left text-muted" style="margin-top: -10px; margin-bottom: 26px"><small>(Yup! Yup! The most common name in the world!)</small></p>
                 <img class="about-image img-circle pull-left" src="img/Avatar.png">
 
-                <p class="text-left text-muted"><small>I am a recent engineering grad from McMaster University.</small></p>
-                <p class="text-left text-muted"><small>My passion lies in product design, & design thinking in general. I believe that every product needs to have a fairy tale to be told. Perhaps that is also why I love storytelling!</small></p>
-                <p class="text-left text-muted"><small>I love working on projects on a high systemic level, learning about people's habits, & problems; then translating that into meaningful solutions. I have been spending my time learning in 3 areas; technical (like my engineering major), business (like my 2 minors that I didn't quite finish!), & design (like the extra curriculum projects I have done).</small></p>
+                <p class="text-left text-muted"><small>I am passionate about product design, & design thinking. I believe that every product needs to have a fairy tale to be told. Perhaps that is also why I love storytelling!</small></p>
+                <p class="text-left text-muted"><small>I recently graduated with a bachelor of Engineering and (almost) 2 minors in Economics and Business, from McMaster U.</small></p>
+                <p class="text-left text-muted"><small>I love working on projects on a high systemic level, learning about people's habits behaviours & problems; then try to translate that into meaningful solutions. It certainly helps having this diverse "jack of all trades" background (engineering, business, & now design), but I hope one day to do graduate studies in the research of Human Behaviour & Cognitive Science at one of the Ivey League Schools - like Harvard!</small></p>
                 <!--<p3 class="lead text-left text-muted">Toronto, Canada</p3>-->
 
-                <p class="text-left text-muted"><small>I’m currently looking for job opportunities in design, as I move away from engineering & fully into product designer... <a href="mailto:foudamo@mcmaster.ca">Let’s chat if you have something in mind.</a></small></p>
+                <p class="text-left text-muted"><small>If you feel like chatting about the pshycology of human behaviours, or musicals and theatre, or even how the heck Donald Trump pulled his genius campaign win <a href="mailto:foudamo@gmail.com">feel free to send me a quick message to grab coffee.</a></small></p>
+                <!--<p class="text-left text-muted"><small>I’m currently looking for job opportunities in design, as I move away from engineering & fully into product designer... <a href="mailto:foudamo@gmail.com">Let’s chat if you have something in mind.</a></small></p>-->
 
                 <!--<h5 class="about-heading text-right"><a class="btn btn-default page-scroll" href="./files/OFoudaMohamed_RESUME.pdf">View Resume</a></h5>-->
                <!-- <a href="#about" class="about-heading text-right btn btn-primary btn-xl page-scroll">Find Out More</a> -->
@@ -148,13 +149,13 @@
         <nav id="footerNav" class="navbar navbar-bottom">
 
             <div class="navbar-footer col-xs-9 col-xs-offset-1">
-                <p2>All work © Mohamed Fouda 2016</p2>
+                <p2>All work © Mohamed Fouda 2017</p2>
 
                 <ul class="nav navbar-nav navbar-right">
                     <a href="https://linkedin.com/in/foudamo" target="_blank"><i class="fa fa-linkedin fa-2x wow bounceIn" data-wow-delay=".1s"></i></a>
                     <a href="https://instagram.com/foudamo" target="_blank"><i class="fa fa-instagram fa-2x wow bounceIn" data-wow-delay=".2s"></i></a>
                     <a href="https://twitter.com/foudamoh" target="_blank"><i class="fa fa-twitter fa-2x wow bounceIn" data-wow-delay=".3s"></i></a>
-                    <a href="mailto:foudamo@mcmaster.ca"><i class="fa fa-envelope-o fa-2x wow bounceIn"></i></a>
+                    <a href="mailto:foudamo@gmail.com"><i class="fa fa-envelope-o fa-2x wow bounceIn"></i></a>
                 </ul>
 
             </div>
