--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 </div>
 
                 <div class="col-lg-6 col-sm-6">
-                    <a href="http://www.gaiaplants.com" target="_blank"><img class="img-circle" src="img/portfolio/gaia.png" alt="Gaia"></a>
+                    <a href="http://www.gaiaplants.com" target="_blank"><img class="img-circle" src="img/portfolio/Gaia.png" alt="Gaia"></a>
                     <!--<a href="http://www.gaiaplants.com"><p>Gaia</p></a>-->
                 </div>
 
