--- a/about.html
+++ b/about.html
@@ -49,8 +49,10 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!--<a href="index.html" class="logo"></a>-->
+                <a style="text-decoration:none" href="index.html">
                     <P style="color:#2E313D; font-weight:400; font-size:26px; text-align:left">mohamed</P>
                     <P style="color:#2E313D; font-weight:600; margin-top: -40px; font-size:38px; text-align:left">fouda</P>
+                </a>
                     <!--<img class="img-responsive" src="img/name.png" alt="logo" align="middle">-->        
                 <!--<a class="navbar-brand" href="index.html">The Ball Picking Robot</a>-->
             </div>
