--- a/about.html
+++ b/about.html
@@ -145,7 +145,7 @@
     </section>
 
 <!-- =================================Footer========================================== --> 
-    <footer id="footer">
+    <footer id="footer" style="margin-top: 100px">
 
         <nav id="footerNav" class="navbar navbar-bottom">
 
