--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
         <nav id="footerNav" class="navbar navbar-bottom">
 
-            <div class="navbar-footer col-xs-9 col-xs-offset-1">
+            <div class="navbar-footer">
                 <p2>All work © Mohamed Fouda 2017</p2>
 
                 <ul class="nav navbar-nav navbar-right">
