--- a/work.html
+++ b/work.html
@@ -126,8 +126,9 @@
 
 <!-- =========================================================================== -->
     <header>
-        <br><br><br><br><br><br>
+        <br><br><br>
         <h5 style="color:#2E313D; padding-left:20px; padding-right:20px">Here is a snapshot of some of my previous work</h5>
+        <br><br><br><br>
     </header>
 
 <!-- ===============================================================protofolio============================================================== -->
@@ -155,10 +156,7 @@
 
                 <div class="col-lg-4 col-sm-6">
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
-                        <img src="img/portfolio/1h.png" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <br>
-                            <div class="portfolio-box-caption-content">
+                        <div class="portfolio-box-caption-content">
                                 <!--
                                 <div class="project-category text-faded">
                                     Human Computer Interaction
@@ -167,9 +165,11 @@
                                     Universal Software Remote Control
                                 </div>
                             -->
-                            <p class="semiBold" style="color:black">Human Computer Interaction</p>
+                            <p class="semiBold" style="color:black">#UX</p>
                             <p class="semiBold" style="color:gray" >Universal Software Remote Control</p>
-                            </div>
+                        </div>
+                        <img src="img/portfolio/1h.png" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
                             <br>
                         </div>
                     </a>
@@ -177,17 +177,16 @@
 
                 <div class="col-lg-4 col-sm-6">
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
-                        <img src="img/portfolio/2.png" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <br>
-                            <div class="portfolio-box-caption-content">
+                        <div class="portfolio-box-caption-content">
                                 <p class="semiBold" style="color:black">
-                                    Website Design & Branding
+                                    #Website-Design #Branding
                                 </p>
                                 <p class="semiBold" style="color:gray">
                                     DeltaHacks II
                                 </p>
-                            </div>
+                        </div>
+                        <img src="img/portfolio/2.png" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
                             <br>
                         </div>
                     </a>
@@ -195,17 +194,16 @@
 
                 <div class="col-lg-4 col-sm-6">
                     <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
-                        <img src="img/portfolio/3.png" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <br>
-                            <div class="portfolio-box-caption-content">
+                        <div class="portfolio-box-caption-content">
                                 <p class="semiBold" style="color:black">
-                                    Branding & Graphic Design
+                                    #Branding #Graphic-Design
                                 </p>
                                 <p class="semiBold" style="color:gray">
                                     Hackitmac
                                 </p>
                             </div>
+                        <img src="img/portfolio/3.png" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
                             <br>
                         </div>
                     </a>
@@ -214,17 +212,16 @@
                 <div class="col-lg-4 col-sm-6">
                     <!--<a href="./files/Poster_final2.pdf" target="_blank" class="portfolio-box">-->
                     <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
-                        <img src="img/portfolio/3h.png" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <br>
-                            <div class="portfolio-box-caption-content">
+                        <div class="portfolio-box-caption-content">
                                 <p class="semiBold" style="color:black">
-                                    Spectrum Startup Weekend Competition
+                                    #Product-Design
                                 </p>
                                 <p class="semiBold" style="color:gray">
                                     Clear Roots
                                 </p>
-                            </div>
+                        </div>
+                        <img src="img/portfolio/3h.png" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
                             <br>
                         </div>
                     </a>
@@ -233,29 +230,28 @@
                 <div class="col-lg-4 col-sm-6">
                     <!--<a href="./files/Poster_final2.pdf" target="_blank" class="portfolio-box">-->
                     <a href="#portfolioModal7" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-box-caption-content">
+                                <p class="semiBold" style="color:black">
+                                    #Product-Design
+                                </p>
+                                <p class="semiBold" style="color:gray">Making Underground Infrastructure Safer</p>
+                            </div>
                         <img src="img/portfolio/4.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <br>
-                            <div class="portfolio-box-caption-content">
-                                <p class="semiBold" style="color:black">
-                                    Product Design
-                                </p>
-                                <p class="semiBold" style="color:gray">Making Underground</p><p class="semiBold" style="color:gray">Infrastructure Safer</p>
-                            </div>
-                            <br>
+                            
                         </div>
                     </a>
                 </div>
 
                 <div class="col-lg-4 col-sm-6">
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-box-caption-content">
+                                <p class="semiBold" style="color:black">#Research</p>
+                                <p class="semiBold" style="color:gray">Scrubbing CO2 Using High Altitude Balloon</p>
+                        </div>
                         <img src="img/portfolio/1.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
-                            <br>
-                            <div class="portfolio-box-caption-content">
-                                <p class="semiBold" style="color:black">Engineering & Society Capstone</p>
-                                <p class="semiBold" style="color:gray">Scrubbing CO2 Using High Altitude Balloon</p>
-                            </div>
                             <br>
                         </div>
                     </a>
@@ -264,17 +260,16 @@
                 <div class="col-lg-4 col-sm-6">
                     <!--<a href="./files/Final_Copy.pdf" target="_blank" class="portfolio-box">-->
                     <a href="#portfolioModal8" class="portfolio-link" data-toggle="modal">
-                        <img src="img/portfolio/5.png" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <br>
-                            <div class="portfolio-box-caption-content">
+                        <div class="portfolio-box-caption-content">
                                 <p class="semiBold" style="color:black">
-                                    Minerva's James Ham Safe Design Contest
+                                    #Industrial-Design #Product-Design
                                 </p>
                                 <p class="semiBold" style="color:gray">
                                     Fisherman Emergency Locater
                                 </p>
                             </div>
+                        <img src="img/portfolio/5.png" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
                             <br>
                         </div>
                     </a>
@@ -283,13 +278,12 @@
                 <div class="col-lg-4 col-sm-6">
                     <!--<a href="./files/MacIN_Final 2.pdf" target="_blank" class="portfolio-box">-->
                     <a href="#portfolioModal9" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-box-caption-content">
+                                <p class="semiBold" style="color:black">#Product-Design</p>
+                                <p class="semiBold" style="color:gray">University Internal Transit System</p>
+                        </div>
                         <img src="img/portfolio/6.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
-                            <br>
-                            <div class="portfolio-box-caption-content">
-                                <p class="semiBold" style="color:black">Product Design</p>
-                                <p class="semiBold" style="color:gray">University Internal Transit System</p>
-                            </div>
                             <br>
                         </div>
                     </a>
@@ -347,8 +341,9 @@
                 <!--<h2>Let's Grab A Coffee?</h2>
                 <hr class="primary">
                 <p><small>Send me a quick message and I promise to battle all those monstrous powers of distractions and get back to you ASAP!</small></p>-->
-                <br><br><br><br><br>
+                <br><br><br><br>
                 <p><small>That's it!</small></p>
+                <br><br><br><br>
                 <p><small>Feel free to<br><a href="mailto:foudamo@gmail.com">ask me about my other work not posted above</a><br>or any details about the ones listed.</small></p>
                 <!--<p><small>P.S. if you've ever got any sort feedback for me, please always send them my way. I much much dearly value feedback.</small></p>-->
             </div>
@@ -359,7 +354,7 @@
 <!-- =================================Footer========================================== --> 
     <footer id="footer">
         <nav id="footerNav" class="navbar navbar-bottom">
-            <div class="navbar-footer col-xs-10 col-xs-offset-1">
+            <div class="navbar-footer">
                 <p2>All work © Mohamed Fouda 2017</p2>
 
                 <ul class="nav navbar-nav navbar-right">
